[Win] Tests fail because DRT reports '(null)' instead of an empty string https://bugs.webkit.org/show_bug.cgi?id=141205

Reviewed by Anders Carlsson.

* DumpRenderTree/win/HistoryDelegate.cpp:
(HistoryDelegate::didNavigateWithNavigationData): Deal with empty BSTR values
properly so that we match expected DumpRenderTree output.


Canonical link: https://commits.webkit.org/159210@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179556 268f45cc-cd09-0410-ab3c-d52691b4dbfc